# chatwheel-rs

./: Cargo.toml  README.md  update-wheel.py
data/: chatwheel.json
src/: app.rs  chatwheel.rs  configure.rs  consts.rs  line.rs  main.rs  pulseaudio.rs  settings.rs
