[package]
name = "chatwheel-rs"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#azul = { git = "https://github.com/lausek/azul" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
