[package]
name = "chatwheel-rs"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
gtk = "0.6.0"
reqwest = { version = "0.10.8", features = ["blocking"] }
rodio = "0.12.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
